// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

export type X = {| ...{||}, foo: number |}; 

=====================================output=====================================
//@flow

export type X = {| ...{||}, foo: number |};

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

import type {X} from './import';

const x: X = {foo: 3};

=====================================output=====================================
//@flow

import type { X } from "./import";

const x: X = { foo: 3 };

================================================================================
`;
